src/components/templates/PartyMap/components/RoomModal/RoomModal.scss
@import "scss/constants";

$border-radius: 22px;
$spacing: 20px;

.room-modal {
  padding: $spacing;

  background-color: $saturated-black;
  background-repeat: no-repeat;
  background-size: cover;

  h2 {
    text-align: center;
  }

  &__title {
    font-weight: 700;

    margin-top: $spacing;
    margin-bottom: $spacing;
  }

  &__main {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;

    > * {
      flex: 1;
      height: fit-content;
      margin-left: $spacing;

      &:first-child {
        margin-left: 0;
      }
    }
  }

  &__icon {
    flex-shrink: 0;
    height: 180px;
    width: 180px;
    border-radius: $border-radius;
    background-color: $black;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
  }

  &__content {
    background: $dark;
    padding: 10px $spacing;
    border-radius: $border-radius;
    height: fit-content;
  }

  &__btn-enter {
    width: 100%;
  }

  &__userlist {
    margin-top: $spacing;
  }

  &__description {
    @include scrollbar;
    margin-top: $spacing;
    margin-bottom: $spacing;
    padding: 10px $spacing;

    background: $dark;
    border-radius: $border-radius;

    max-height: 25vh;
    overflow-y: auto;
  }

  &__events {
    max-height: 35vh;
    overflow-y: auto;
    // @debt these overrides are here because ScheduleItem sets incompatible margins/etc.
    //   We should just clean it up there instead.
    .schedule-item-container {
      margin: -10px;
      padding: 10px $spacing;

      border-radius: $border-radius;
    }
  }
}

